gccida/g1/move_block_to_reg
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_block_to_reg/src/expr.c:2276:55: error: must use 'enum' tag to refer to type 'machine_mode'
void  move_block_to_reg( int regno, rtx x, int nregs, machine_mode mode) 
                                                      ^
                                                      enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_block_to_reg/src/expr.c:2286:30: error: invalid suffix 'orce' on integer constant
v7 = operand_sub*(short *)0xforce( x, i, mode); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_block_to_reg/src/expr.c:2286:6: error: use of undeclared identifier 'operand_sub'
v7 = operand_sub*(short *)0xforce( x, i, mode); 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_block_to_reg/src/expr.c:2287:30: error: invalid suffix 'xmode' on integer constant
v8 = gen_rtx_REG( *(short *)0xmode, regno + i); 
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_block_to_reg/src/obj/expr.o] Error 1
